# num

./: .gitignore  README.md  deps.edn
.github/workflows/: cuda-native.yml
docs/adr/: 0001-architecture.md  0002-cuda-native-backend.md  0003-kotoba-gpu-compiler-integration.md  0004-native-metal-compiler-backend.md
native/cuda/: CMakeLists.txt  README.md  num_cuda.cu  num_cuda.h  smoke.cu
native/cuda/num/: cuda_native_verify.clj
native/metal/: CMakeLists.txt  num_metal.h  num_metal.mm
native/metal/num/: metal_native_verify.clj
scripts/: verify-cuda.sh  verify-metal-native.sh
src/num/: array.cljc  autograd.cljc  core.cljc  cpu.cljc  cuda.clj  cuda_jna.clj  deno_gpu.cljc  dtype.cljc  gpu_compiler.clj  metal.clj  metal_jna.clj  protocol.cljc  quantized.cljc  solver.cljc  sparse.cljc  tensor.cljc  tensor_async.cljc  wgsl.cljc  wgsl_backend.cljc
test/num/: autograd_test.cljc  cljs_verify.cljs  contract.cljc  cpu_test.cljc  cuda_test.clj  deno_attention_backward_verify.cljs  deno_gpu_benchmark.cljs  deno_gpu_dtype_verify.cljs  deno_gpu_verify.cljs  deno_paged_kv_verify.cljs  deno_q8_verify.cljs  deno_q8_worker.cljs  deno_quantized_benchmark.cljs  deno_quantized_verify.cljs  deno_raw_upload_verify.cljs  dtype_test.cljc  gpu_compiler_test.clj  metal_test.clj  quantized_test.cljc  solver_test.cljc  tensor_async_verify.cljs  tensor_test.cljc  wgsl_test.cljc
verify/: metal_compiler_runtime.swift  metal_compiler_verify.clj  metal_contract.js  metal_pcg.js  webgpu_verify.js
